# angelite

./: '  .gitattributes  .gitignore  .gitmodules  ;  AASD.csv  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LOG2.txt  LOG3.txt  Package.swift  README.md  WORLDGEN_RENDERGRAPH.md  build.zig  bun.lockb  deez.txt  deez123.csv  log  log123.txt  logalmostthere.txt  package-lock.json  package.json  run.sh  rust-toolchain.toml  rustc-ice-2025-02-20T19_23_02-72348.txt  rustc-ice-2025-02-20T19_25_03-72611.txt  shaderc.sh  zls.json
.claude/: settings.local.json
.sourcekit-lsp/: config.json
.swiftpm/xcode/: Untitled.swift
.swiftpm/xcode/package.xcworkspace/: contents.xcworkspacedata
BMO/Profiles/: BMO.md
crates/api/: Cargo.toml
crates/api-diy/: Cargo.toml
crates/api-diy/src/: main.rs
crates/api/src/: lib.rs
crates/backstart/: Cargo.toml
crates/base/: Cargo.toml
crates/base-macro/src/: lib.rs
crates/base/src/collections/: array.rs  arrayvec.rs  skip.rs
crates/base/src/rt/: join.rs  mod.rs  worker.rs
crates/base/src/sync/: barrier.rs  mod.rs  oneshot.rs  thread_local.rs
crates/ecs/: Cargo.toml
crates/ecs-macro/: Cargo.toml
crates/ecs-macro/src/: lib.rs
crates/ecs/src/: entity.rs  lib.rs  schedule.rs  world.rs
crates/editor/: Cargo.toml  build.rs
crates/editor/src/: lib.rs
crates/editor/src/macos/: bridge.h  build.swift  main.swift  module.modulemap
crates/fast/: Cargo.toml
crates/fast-macro/: Cargo.toml
crates/fast-macro/src/: lib.rs
crates/fast-test/: Cargo.toml
crates/fast/src/: lib.rs
crates/fast/src/collections/: array.rs  arrayvec.rs  bi.rs  mod.rs  queue.rs  skip.rs
crates/fast/src/math/: vector.rs
crates/fast/src/rng/: mod.rs
crates/fast/src/rt/: comm.rs  mod.rs  worker.rs
crates/fast/src/sync/: backoff.rs  barrier.rs  mod.rs  oneshot.rs  split.rs  thread_local.rs  yield.rs
crates/fast/src/time/: mod.rs
crates/fleet/: Cargo.toml
crates/foundation/: Cargo.toml  README.md
crates/http/src/: lib.rs  server.rs
crates/major/: Cargo.toml  NOTICE
crates/major-macro/src/: lib.rs
crates/major/src/: lib.rs  world.rs
crates/major/src/component/: archetype.rs  mod.rs  registry.rs  source.rs  table.rs  world.rs
crates/major/src/entity/: mod.rs
crates/major/src/query/: fetch.rs  mod.rs
crates/major/src/system/: mod.rs
crates/meshpipe/src/: lib.rs
crates/prism/src/: main.rs
crates/span/: Cargo.toml  LICENSE
crates/span/src/: lib.rs
crates/span/src/component/: archetype.rs  mod.rs  table.rs
crates/techkit/: Cargo.toml
crates/techkit/src/: main.rs
crates/xenolith/src/: lib.rs
lib/rust/io-sys/: Cargo.toml
marketing/: banner.ai  icon.ai
meta/: Simulating light with math.md  how to raytrace (your next big idea).md  meeting with man ian king.pages
old/2024/meshpipe/: Cargo.toml  build.rs
old/2024/rust/rt/: Cargo.toml
old/2024/rust/rt/src/: join.rs  worker.rs
old/2025/angelite-ai/: package-lock.json  package.json
old/2025/compiler/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
old/2025/gfx/: build.zig.zon
old/2025/math/: build.zig.zon
old/2025/prism/: Cargo.toml  build.rs
old/2025/surface/: build.zig
pipeline/zig_to_rust/: 050_rust.dontuse
src/: example_main.rs  lib.rs~
src-old/javascript/angelite/: package-lock.json  package.json
src-old/javascript/angelite-ai/: package-lock.json  package.json  svelte.config.js  vite.config.js
src-old/javascript/angelite-app/: package-lock.json  package.json  vite.config.js
src-old/javascript/old/: package.json
src-old/meshpipe/src/: lib.rs
src-old/python/bind/: bind.py
src-old/refactor/Techkit/: Cargo.toml  README.md
src-old/refactor/api-diy/: Cargo.toml
src-old/refactor/ecs/: Cargo.toml  LICENSE  NOTICE
src-old/refactor/ecs/src/: entity.rs
src-old/refactor/ecs/src/component/: access.rs  archetype.rs  source.rs  table.rs
src-old/refactor/ecs/src/query/: fetch.rs
src-old/refactor/ecs/src/system/: func.rs  graph.rs  mod.rs  param.rs  sequence.rs
src-old/refactor/http/: Cargo.toml
src-old/rust/base-macro/: Cargo.toml
src-old/rust/bind/: Cargo.toml  Dockerfile
src-old/swift/: build.sh
src/angelite-ai/: package-lock.json  package.json
src/api-diy/: package-lock.json  package.json  vite.config.js
src/backend/: Cargo.toml
src/backend/src/: main.rs
src/biolab/: Cargo.toml
src/boxblox/: Cargo.toml
src/boxblox/src/: main.rs
src/boxwarden/: Cargo.toml
src/compiler/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/compiler/src/: main.cpp
src/foxbox/: Cargo.toml
src/foxbox/src/: main.rs
src/foxboxd/: Cargo.toml
src/gfx/: build.zig  build.zig.zon
src/gfx-zig-test/: build.zig  build.zig.zon
src/input/: README.md  build.zig
src/major/: Cargo.toml  build.rs  build.zig  build.zig.zon
src/major2/: build.rs  build.zig
src/markdown/: Can You REALLY Create a Game in Just ONE Week?.md  The SHOCKING Truth About Computer Performance (It's Not What You Think).md  meeting with man.pages
src/math/: build.zig  build.zig.zon  root.zig
src/meshpipe/: Cargo.toml
src/opcode/: Cargo.toml  README.md
src/opcode-macro/: Cargo.toml
src/opcode-registry/: Cargo.toml
src/outpost-game/: package-lock.json  package.json  vite.config.js
src/prism/: build.rs
src/span/: Cargo.toml
src/span-macro/: Cargo.toml
src/surface/: build.zig
src/swift/: build.sh
src/synthesis/: Cargo.toml
src/synthesis-forum/: package-lock.json  package.json
src/synthesis-game/: package-lock.json  package.json
src/synthesis-lander/: deploy.sh  package-lock.json  package.json  synthesis-lander.service
src/synthesis-ui/: package-lock.json  package.json
src/synthesis/src/: camera_controller.rs  main.rs  voxel_renderer.rs  voxel_world.rs
src/synthesis2/: Cargo.toml
src/tailgate/: Cargo.toml
src/trace/: build.zig
www/: README.md  package-lock.json  package.json
www/angelite/: package.json
www/angelite-chat/: tailwind.config.js
www/blockglow-com/: package-lock.json  package.json  vite.config.js
www/techkit-dev/: package.json
zig_to_rust/: 000_arch  050_zig.dontuse  entry.sh
(+4428 files in other folders)
