[package]
name = "base"
version = "0.1.3"
readme = "README.md"
edition = "2024"
description = "High-performance SIMD vectorized algorithms"
authors = ["Sol Midnight <sol@blockglow.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blockglow/techkit"
keywords = ["simd", "math", "vector"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
base-macro = { version = "0.0.2", path = "../base-macro" }
derive_more = { version = "1.0.0", features = ["deref", "from", "deref_mut"] }
num-traits = "0.2.19"
paste = "1.0.15"
flume = "*"
pin-project = "1.1.8"
