[package]
name = "editor"
version = "1.0.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Next-gen integrated development engine and environment"
homepage = "https://techkit.dev"
repository = "https://github.com/blockglow/techkit"
readme = "../../README.md"

[dependencies]
fast = "0.1.0"