[package]
name = "fast-macro"
version = "0.0.0"
edition = "2024"
description = "High-performance SIMD mathematics, optimized GPU computation, and vectorized algorithms"
authors = ["Sol Midnight <sol@blockglow.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blockglow/fast"
keywords = ["simd", "performance", "math", "gpu", "vector"]
categories = ["mathematics", "science", "algorithms"]

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
