[package]
name = "fleet"
version = "0.1.2"
edition = "2024"
license-file = "./LICENSE"
description = "Next-gen integrated entity component system"
homepage = "https://techkit.dev"
repository = "https://github.com/blockglow/blockglow"

[dependencies]
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
base = { path = "../base" }
