[package]
name = "major"
version = "0.0.0"
edition = "2024"
license-file = "./LICENSE"
readme = "./README.md"
description = "Next-gen integrated entity component system"
homepage = "https://techkit.dev"
repository = "https://github.com/blockglow/blockglow"

[dependencies]
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
fast = { version = "0.1.3", path = "../fast" }
