[package]
name = "span"
version = "0.1.1"
edition = "2024"
license-file = "../../LICENSE"
description = "Next-gen integrated entity component system"
homepage = "https://techkit.dev"
repository = "https://github.com/blockglow/techkit"

[dependencies]
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
fast = { version = "0.1.1", path = "../fast" }
