[package]
name = "techkit"
version = "0.0.1"
edition = "2024"
license-file = "../../LICENSE"
description = "Next-gen integrated development engine and environment"
homepage = "https://techkit.dev"
repository = "https://github.com/blockglow/techkit"
readme = "../../README.md"

[dependencies]
fast = { version = "0.1.1", path = "../fast" }
