[package]
name = "boxblox"
version = "0.0.1"
edition = "2021"
description = "WIP CLI for VPN proxy based on Wireguard mesh routing"
license = "MIT"
authors = ["Sol Midnight <sol@synthesis.game>"]

[[bin]]
name = "bb"
path = "src/main.rs"

[lib]
name = "boxblox"
path = "src/lib.rs"

[dependencies]
clap = { version  = "4.5.40", features = ["derive"] }