
[package]
name = "synthesis"
version = "0.1.0"
edition = "2024"

[dependencies]
major = { path = "../major" }
noise = "*"
glam = "*"
quadtree = "0.3.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
