[package]
name = "rt"
version = "0.1.0"
edition = "2024"

[dependencies]
rt-macro = {path = "../rt-macro" }
derive_more = { version = "*", features = ["full"] }
flume = "*"
pin-project = "*"
sync = { path = "../sync" }
math = { path = "../math" }
collections = { path = "../collections" }